c4prj2_input/grade.txt
Grading at Thu May  9 01:39:17 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:47:20: error: ‘x’ undeclared (first use in this function)
     for(int j = 0; x < fc->decks[i].n_cards; x++)
                    ^
future.c:47:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
